Using new nuget version

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Header.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Header.cshtml
@@ -35,7 +35,7 @@
                     {
                         <ul id="navigation" class="govuk-header__navigation-list">
                             <li class="govuk-header__navigation-item">
-                                <a class="govuk-header__link" asp-page="/account/signout">Sign out</a>
+                                <a class="govuk-header__link" href="/account/signout">Sign out</a>
                             </li>
                         </ul>
                     }
