--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -3,89 +3,110 @@
 @model WelcomeModel
 @{
     ViewData["Title"] = "Welcome";
-	var organisationName = Model.FamilyHubsUser.OrganisationId == "-1" ? "Department for Education" : Model.OrganisationViewModel.Name;
+    var organisationName = Model.FamilyHubsUser.OrganisationId == "-1" ? "Department for Education" : Model.OrganisationViewModel.Name;
 }
 <a asp-page="/index" class="govuk-back-link">Back</a>
 
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
-
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-	        
-	        <h1 class="govuk-heading-l govuk-!-margin-bottom-1">@Model.FamilyHubsUser.FirstName @Model.FamilyHubsUser.LastName</h1>
-	        
-			<h1 class="govuk-caption-l">@organisationName</h1>
-	        
-	        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
-	        
-	        <h2 class="govuk-heading-m govuk-!-margin-bottom-6">Accounts</h2>
-	        
-	        <div class="cards">
-				<div class="card">
-					<h2 class="govuk-heading-m"><a asp-page-handler="AddUserFlow" data-module="govuk-button" data-testid="add-User">Create accounts</a></h2>
-					<p class="govuk-body-s">Create different types of user accounts.</p>
-				</div>
-				<div class="card">
-					<h2 class="govuk-heading-m"><a href="#">Manage accounts</a></h2>
-					<p class="govuk-body-s">View or delete user accounts.</p>
-				</div>
-			</div>
-	        
-	        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
-	        
-	        <h2 class="govuk-heading-m govuk-!-margin-bottom-6">Local authorities (LAs)</h2>
-	        
-	        <div class="cards">
-				<div class="card">
-					<h2 class="govuk-heading-m"><a href="#">Add an LA service</a></h2>
-					<p class="govuk-body-s">Add a service to the directory.</p>
-				</div>
-				<div class="card">
-					<h2 class="govuk-heading-m"><a href="#">Manage LA services</a></h2>
-					<p class="govuk-body-s">View, change or delete services shown in the directory.</p>
-				</div>
-				<div class="card">
-					<h2 class="govuk-heading-m"><a href="#">Add a family hub</a></h2>
-					<p class="govuk-body-s">Add a family hub to the directory.</p>
-				</div>
-				<div class="card">
-					<h2 class="govuk-heading-m"><a href="#">Manage family hubs</a></h2>
-					<p class="govuk-body-s">View, change or delete family hubs shown in the directory.</p>
-				</div>
-				<div class="card">
-					<h2 class="govuk-heading-m"><a href="#">Activate a local authority</a></h2>
-					<p class="govuk-body-s">Activate an LA before you create its accounts, services and family hubs.</p>
-				</div>
-			</div>
-			
-			<hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
-			
-			<h2 class="govuk-heading-m govuk-!-margin-bottom-6">Voluntary community organisations (VCSs)</h2>
-			
-			<div class="cards">
-				<div class="card">
-					<h2 class="govuk-heading-m"><a href="#">Add a VCS service</a></h2>
-					<p class="govuk-body-s">Add a service to the directory.</p>
-				</div>
-				<div class="card">
-					<h2 class="govuk-heading-m"><a href="#">Manage VCS services</a></h2>
-					<p class="govuk-body-s">View, change or delete services shown in the directory.</p>
-				</div>
-				<div class="card">
-					<h2 class="govuk-heading-m"><a href="#">Add a VCS organisation</a></h2>
-					<p class="govuk-body-s">Add an organisation before creating their user accounts.</p>
-				</div>
-				<div class="card">
-					<h2 class="govuk-heading-m"><a href="#">Manage VCS organisations</a></h2>
-					<p class="govuk-body-s">View, change or delete existing organisations.</p>
-				</div>
-			</div>
-			
+            
+            <h1 class="govuk-heading-l govuk-!-margin-bottom-1">@Model.FamilyHubsUser.FirstName @Model.FamilyHubsUser.LastName</h1>
+
+            <h1 class="govuk-caption-l">@organisationName</h1>
+
+            <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+
+            <h2 class="govuk-heading-m govuk-!-margin-bottom-6">Accounts</h2>
+
+            <div class="cards">
+                <div class="card">
+                    <h3 class="govuk-heading-s">
+                        <a asp-page-handler="AddPermissionFlow" data-testid="add-permission">Add permissions</a>
+                    </h3>
+                    <p class="govuk-body-s">Add account permissions to manage family support services and manage connection requests</p>
+                </div>
+                <div class="card">
+                    <h3 class="govuk-heading-s">
+                        <a href="#">Manage permissions</a>
+                    </h3>
+                    <p class="govuk-body-s">View and remove account permissions to manage family support services or manage connection requests</p>
+                </div>
+            </div>
+
+            <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+
+            <h2 class="govuk-heading-m govuk-!-margin-bottom-6">Local authorities (LAs)</h2>
+
+            <div class="cards">
+                <div class="card">
+                    <h3 class="govuk-heading-s">
+                        <a href="#">Add an LA service</a>
+                    </h3>
+                    <p class="govuk-body-s">Add a service to the directory.</p>
+                </div>
+                <div class="card">
+                    <h3 class="govuk-heading-s">
+                        <a href="#">Manage LA services</a>
+                    </h3>
+                    <p class="govuk-body-s">View, change or delete services shown in the directory.</p>
+                </div>
+                <div class="card">
+                    <h3 class="govuk-heading-s">
+                        <a href="#">Add a family hub</a>
+                    </h3>
+                    <p class="govuk-body-s">Add a family hub to the directory.</p>
+                </div>
+                <div class="card">
+                    <h3 class="govuk-heading-s">
+                        <a href="#">Manage family hubs</a>
+                    </h3>
+                    <p class="govuk-body-s">View, change or delete family hubs shown in the directory.</p>
+                </div>
+                <div class="card">
+                    <h3 class="govuk-heading-s">
+                        <a href="#">Activate a local authority</a>
+                    </h3>
+                    <p class="govuk-body-s">Activate an LA before you create its accounts, services and family hubs.</p>
+                </div>
+            </div>
+
+            <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+
+            <h2 class="govuk-heading-m govuk-!-margin-bottom-6">Voluntary community organisations (VCSs)</h2>
+
+            <div class="cards">
+                <div class="card">
+                    <h3 class="govuk-heading-s">
+                        <a href="#">Add a VCS service</a>
+                    </h3>
+                    <p class="govuk-body-s">Add a service to the directory.</p>
+                </div>
+                <div class="card">
+                    <h3 class="govuk-heading-s">
+                        <a href="#">Manage VCS services</a>
+                    </h3>
+                    <p class="govuk-body-s">View, change or delete services shown in the directory.</p>
+                </div>
+                <div class="card">
+                    <h3 class="govuk-heading-s">
+                        <a href="#">Add a VCS organisation</a>
+                    </h3>
+                    <p class="govuk-body-s"> Add an organisation before creating their user accounts.</p>
+                </div>
+                <div class="card">
+                    <h3 class="govuk-heading-s">
+                        <a href="#">Manage VCS organisations</a>
+                    </h3>
+                    <p class="govuk-body-s">View, change or delete existing organisations.</p>
+                </div>
+            </div>
+
             <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
             <div class="cards">
                 <div class="card">
-                    <h2 class="govuk-heading-m">
+                    <h2 class="govuk-heading-s">
                         <a asp-page-handler="AddServiceFlow" asp-route-organisationid="@Model.OrganisationViewModel.Id" data-module="govuk-button" data-testid="add-service">
                             Add a service
                         </a>
@@ -93,7 +114,7 @@
                     <p class="govuk-body-s">Add a service to the directory.</p>
                 </div>
                 <div class="card">
-                    <h2 class="govuk-heading-m">
+                    <h2 class="govuk-heading-s">
                         <a asp-page-handler="ManageServiceFlow" asp-route-organisationid="@Model.OrganisationViewModel.Id" data-module="govuk-button" data-testid="manage-services">
                             Manage your services
                         </a>
@@ -103,15 +124,16 @@
                 @if (Model.IsUploadSpreadsheetEnabled)
                 {
                     <div class="card">
-                    <h2 class="govuk-heading-m">
-                        <a asp-page-handler="UploadSpreadsheetData" asp-route-organisationid="@Model.OrganisationViewModel.Id" data-module="govuk-button" data-testid="upload-spreadsheet">
-                            Upload Excel Spreadsheet
-                        </a>
-                    </h2>
-                    <p class="govuk-body-s">Upload an excel spreadsheet.</p>
-                </div>    
+                        <h2 class="govuk-heading-s">
+                            <a asp-page-handler="UploadSpreadsheetData" asp-route-organisationid="@Model.OrganisationViewModel.Id" data-module="govuk-button" data-testid="upload-spreadsheet">
+                                Upload Excel Spreadsheet
+                            </a>
+                        </h2>
+                        <p class="govuk-body-s">Upload an excel spreadsheet.</p>
+                    </div>
                 }
             </div>
+            
         </div>
     </div>
 </main>
