--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -11,7 +11,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             
-            <h1 class="govuk-heading-l govuk-!-margin-bottom-1">@Model.FamilyHubsUser.FirstName @Model.FamilyHubsUser.LastName</h1>
+            <h1 class="govuk-heading-l govuk-!-margin-bottom-1">@Model.FamilyHubsUser.FullName</h1>
 
             <h1 class="govuk-caption-l">@organisationName</h1>
 
