--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@model AccountAdminView
+﻿@model AccountAdminViewModel
 @{
     var errorGroupCss = Model.HasValidationError ? "govuk-form-group--error" : "";
     Layout = "~/pages/Shared/_Layout.cshtml";
