--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
     <!--[if IE 8]>
       <link rel="stylesheet" href="~/lib/govuk/govuk-frontend-ie8-4.3.0.min.css" />
     <![endif]-->
+    @RenderSection("Head", required: false)
 </head>
 <body class="govuk-template__body dfe-template__body">
 
