Check Details Page

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/AddPermissionCheckAnswer.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/AddPermissionCheckAnswer.cshtml
@@ -4,3 +4,46 @@
 @{
     Layout = "~/pages/Shared/_Layout.cshtml";
 }
+
+<a asp-page="/UserName" class="govuk-back-link">Back</a>
+
+<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
+
+
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+
+            <fieldset class="govuk-fieldset">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                    <h1 class="govuk-fieldset__heading">
+                        Check account details
+                    </h1>
+                </legend>
+
+                <dl class="govuk-summary-list govuk-!-margin-bottom-9" id="replace-commas">
+
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRow("Who for", Model.WhoFor, "#"))
+
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRow("Type of permission", Model.TypeOfPermission, "#"))
+
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRow("Local authority", Model.LocalAuthority, "#"))
+
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRow("Email address", Model.Email, "#"))
+
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRow("Name", Model.Email, "#"))
+
+                </dl>
+
+                <form method="post">
+
+                    <button class="govuk-button">
+                        Confirm details
+                    </button>
+                </form>
+            </fieldset>
+        </div>
+
+
+    </div>
+
+</main>
