--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
@@ -2,7 +2,6 @@
 @model WhichLocalAuthority
 @{
     ViewData["Title"] = "Which Local Authority";
-    var errorCss = Model.HasValidationError ? "govuk-input--error" : string.Empty;
 }
 @section Head {
     <link rel="stylesheet" href="~/css/accessible-autocomplete.min.css" asp-append-version="true" />
@@ -23,12 +22,19 @@
 }
 
 <div class="govuk-form-group">
+    @if (Model.IsVcsJourney)
+    {
+        <div class="govuk-hint govuk-!-margin-top-2">
+            Their organisation must be in the directory for it to appear here. If it's not, you can <a href="#">add an organisation</a>.
+        </div>    
+    }
+    
     <label class="govuk-label" for="localAuthority">
         <!---Select local authority--->
     </label>
     <select class="govuk-select" id="localAuthority" name="localAuthority" aria-describedby="localAuthority-hint">
         <option value="" selected disabled></option>
-        @foreach(var option in Model.Authorities)
+        @foreach(var option in Model.LocalAuthorities)
         {
             <option value="@option">@option</option>
         }
