--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/AddPermissionCheckAnswer.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/AddPermissionCheckAnswer.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using FamilyHubs.ServiceDirectory.Admin.Core.Models
 @model AddPermissionCheckAnswer
 
 @{
@@ -22,15 +23,15 @@
 
                 <dl class="govuk-summary-list govuk-!-margin-bottom-9" id="replace-commas">
 
-                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRow("Who for", Model.WhoFor, "#"))
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Who for", Model.WhoFor, "#"))
 
-                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRow("Type of permission", Model.TypeOfPermission, "#"))
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Type of permission", Model.TypeOfPermission, "#"))
 
-                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRow("Local authority", Model.LocalAuthority, "#"))
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Local authority", Model.LocalAuthority, "#"))
 
-                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRow("Email address", Model.Email, "#"))
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Email address", Model.Email, "#"))
 
-                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRow("Name", Model.Email, "#"))
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Name", Model.Name, "#"))
 
                 </dl>
 
