--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/_checkDetailRow.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/_checkDetailRow.cshtml
@@ -1,5 +1,4 @@
-﻿@model CheckDetailsRow
-
+﻿@model FamilyHubs.ServiceDirectory.Admin.Core.Models.CheckDetailsRowModel
 
 <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
