--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
@@ -14,7 +14,7 @@
         let selectElement = document.querySelector('#LaOrganisationName')
 
         accessibleAutocomplete.enhanceSelectElement({
-            defaultValue: '',
+            defaultValue: '@Model.LaOrganisationName',
             name: 'localAuthority',
             selectElement: selectElement
         })
