--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/_checkDetailRow.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/_checkDetailRow.cshtml
@@ -4,7 +4,7 @@
     <dt class="govuk-summary-list__key">
         @Model.Name
     </dt>
-    <dd class="govuk-summary-list__value">
+    <dd class="govuk-summary-list__value" id="@Model.Id">
         @Model.Value
     </dd>
     <dd class="govuk-summary-list__actions">
