--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/_Layout.cshtml
@@ -49,7 +49,7 @@
                         </div>
                     </fieldset>
                 </div>
-                <button class="govuk-button">
+                <button class="govuk-button" id="buttonContinue">
                     Continue
                 </button>
             </form>
