--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -22,7 +22,7 @@
             <div class="cards">
                 <div class="card">
                     <h3 class="govuk-heading-s">
-                        <a asp-page-handler="AddPermissionFlow" data-testid="add-permission">Add permissions</a>
+                        <a asp-page-handler="AddPermissionFlow" id="add-permission">Add permissions</a>
                     </h3>
                     <p class="govuk-body-s">Add account permissions to manage family support services and manage connection requests</p>
                 </div>
