--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/UserEmail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/UserEmail.cshtml
@@ -9,4 +9,4 @@
     They will use this to sign in to their account.
 </div>
 
-<input class="govuk-input @errorCss" id="fullName" asp-for="@Model.EmailAddress" type="text" maxlength="255" autocomplete="off">
+<input class="govuk-input @errorCss" id="emailAddress" asp-for="@Model.EmailAddress" type="text" maxlength="255" autocomplete="off">
