updated Admin to Manager, error link bug fix, check boxes for LA permissions, header fixes, change link implemented

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfRole.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfRole.cshtml
@@ -2,6 +2,7 @@
 @model TypeOfRole
 @{
     ViewData["Title"] = "Type of user";
+    Model.ErrorElementId = "role-for-organisation-type-La";
 }
 
 <div class="govuk-radios" data-module="govuk-radios">
