--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
@@ -2,6 +2,7 @@
 @model WhichLocalAuthority
 @{
     ViewData["Title"] = "Which Local Authority";
+    Model.ErrorElementId = "LaOrganisationName";
 }
 @section Head {
     <link rel="stylesheet" href="~/css/accessible-autocomplete.min.css" asp-append-version="true" />
