--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <div class="govuk-error-summary__body">
                                 <ul class="govuk-list govuk-error-summary__list" data-testid="errors-list">
                                     <li>
-                                        <a href="#govuk-fieldset">@Model.ErrorMessage</a>
+                                        <a href="#@Model.ErrorElementId">@Model.ErrorMessage</a>
                                     </li>
                                 </ul>
                             </div>
