--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfUserLa.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfUserLa.cshtml
@@ -2,18 +2,19 @@
 @model TypeOfUserLa
 @{
     ViewData["Title"] = "Type of User La";
+    Model.ErrorElementId = "LaManager";
 }
 
-<div class="govuk-radios" data-module="govuk-radios">
-    <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="la-admin" data-testid="la-admin" asp-for="UserTypeForLa" type="radio" value="Admin">
-        <label class="govuk-label govuk-radios__label" for="la-admin">
+<div class="govuk-checkboxes" data-module="govuk-checkboxes">
+    <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" data-testid="LaManager" id="LaManager" name="LaManager" value="true" type="checkbox" @(Model.LaManager ? "checked=\"checked\"" : string.Empty) >
+        <label class="govuk-label govuk-checkboxes__label" for="LaManager">
             Add and manage services, family hubs and accounts
         </label>
     </div>
-    <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="la-professional" data-testid="la-professional" asp-for="UserTypeForLa" type="radio" value="Professional">
-        <label class="govuk-label govuk-radios__label" for="la-professional">
+    <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="LaProfessional" name="LaProfessional" value="true" type="checkbox" @(Model.LaProfessional ? "checked=\"checked\"" : string.Empty) >
+        <label class="govuk-label govuk-checkboxes__label" for="LaProfessional">
             Make connection requests to voluntary and community sector services
         </label>
     </div>
