--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/UserName.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/UserName.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "User Name";
     var errorCss = Model.HasValidationError ? "govuk-input--error" : string.Empty;
+    Model.ErrorElementId = "fullName";
 }
 
 <input class="govuk-input @errorCss" id="fullName" asp-for="@Model.FullName" type="text" maxlength="255" autocomplete="off">
