--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichVcsOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichVcsOrganisation.cshtml
@@ -2,6 +2,7 @@
 @model WhichVcsOrganisation
 @{
     ViewData["Title"] = "Which organisation";
+    Model.ErrorElementId = "VcsOrganisationName";
 }
 @section Head {
     <link rel="stylesheet" href="~/css/accessible-autocomplete.min.css" asp-append-version="true" />
