--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfUserVcs.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfUserVcs.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model TypeOfUserVcs
 @{
-    ViewData["Title"] = "Type of User La";
+    ViewData["Title"] = "Type of user VCS";
     Model.ErrorElementId = "VcsManager";
 }
 
