header link styling fix

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Header.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Header.cshtml
@@ -37,10 +37,10 @@
                             <li class="govuk-header__navigation-item">
                                 <a class="govuk-header__link" href="#">My account</a>
                             </li>
-                        </ul>
-                        <ul id="navigation" class="govuk-header__navigation-list">
                             <li class="govuk-header__navigation-item">
-                                <a class="govuk-header__link" href="/account/signout">Sign out</a>
+                                <a class="govuk-header__link" href="/account/signout">
+                                    Sign out
+                                </a>
                             </li>
                         </ul>
                     }
