--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/UserEmail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/UserEmail.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model UserEmail
 @{
-    ViewData["Title"] = "User Name";
+    ViewData["Title"] = "User Email";
     var errorCss = Model.HasValidationError ? "govuk-input--error" : string.Empty;
     Model.ErrorElementId = "emailAddress";
 }
