--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/Confirmation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/Confirmation.cshtml
@@ -28,7 +28,7 @@
                     <p class="govuk-body">We have emailed the user with a link to create their password.</p>
                     <p class="govuk-body">They can use their account after they have created their password.</p>
                     <form method="post">
-                        <a href="/" class="govuk-button">Go to homepage</a>
+                    <a asp-page="/Welcome" class="govuk-button">Go to homepage</a>
                     </form>
 
                 </div>
