--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/Confirmation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/Confirmation.cshtml
@@ -17,7 +17,7 @@
                 <div class="govuk-grid-column-two-thirds">
                     <div class="govuk-panel govuk-panel--confirmation">
                         <h1 class="govuk-panel__title">
-                            Details confirmed
+                            Permissions added
                         </h1>
                     </div>
 
@@ -25,10 +25,14 @@
 
                     <h2 class="govuk-heading-m govuk-!-margin-top-6">What happens next</h2>
 
-                    <p class="govuk-body">We have emailed the user with a link to create their password.</p>
-                    <p class="govuk-body">They can use their account after they have created their password.</p>
+                    <p class="govuk-body">We've emailed @Model.Name:</p>
+
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>to let them know their permissions have been set up</li>
+                        <li>a link to the service, where they can create their password and set up two-factor authentication</li>
+                    </ul>
                     <form method="post">
-                    <a asp-page="/Welcome" class="govuk-button">Go to homepage</a>
+                        <a asp-page="/Welcome" class="govuk-button">Go to homepage</a>
                     </form>
 
                 </div>
@@ -36,6 +40,38 @@
 
 
         </main>
+
+
+    <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
+
+
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
+
+
+
+                <h2 class="govuk-heading-m govuk-!-margin-top-6">What happens next</h2>
+
+                <p class="govuk-body">
+                    We've emailed
+
+                    John Smith:
+
+                </p><ul class="govuk-list govuk-list--bullet">
+                    <li>to let them know their permissions have been set up</li>
+                    <li>a link to the service, where they can create their password and set up two-factor authentication</li>
+                </ul>
+                <br>
+
+                <form method="post">
+                    <a href="../homepage" class="govuk-button">Go to homepage</a>
+                </form>
+
+            </div>
+        </div>
+
+
+    </main>
     </div>
 
 
