--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfRole.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfRole.cshtml
@@ -9,13 +9,13 @@
     <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="role-for-organisation-type-La" data-testid="role-for-organisation-type-la" asp-for="OrganisationType" type="radio" value="LA">
         <label class="go vuk-label govuk-radios__label" for="role-for-organisation-type-La">
-            Someone who works for a local authority
+            @Model.LaRoleTypeLabel
         </label>
     </div>
     <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="role-for-organisation-type-vcs" data-testid="role-for-organisation-type-vcs" asp-for="OrganisationType" type="radio" value="VCS">
         <label class="govuk-label govuk-radios__label" for="role-for-organisation-type-vcs">
-            Someone who works for a voluntary and community sector organisation
+            @Model.VcsRoleTypeLabel
         </label>
     </div>
 </div>
