updated add permission journey to use base class for navigation links

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/_Layout.cshtml
@@ -5,14 +5,14 @@
 }
 
 @section Head {
-    @RenderSection("Head", false)
+    @await RenderSectionAsync("Head", false)
 }
 
 @section Scripts{
-    @RenderSection("Scripts", false)
+    @await RenderSectionAsync("Scripts", false)
 }
 
-<a asp-page="@Model.BackLink" class="govuk-back-link">Back</a>
+<a asp-page="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
 
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
