--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichVcsOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichVcsOrganisation.cshtml
@@ -24,7 +24,7 @@
 
 <div class="govuk-form-group">
     <div class="govuk-hint govuk-!-margin-top-2">
-        Their organisation must be in the directory for it to appear here. If it's not, you can <a href="#">add an organisation</a>.
+        Their organisation must be in the directory for it to appear here. If it's not, you can <a asp-area="vcsAdmin" asp-page="/AddOrganisation">add an organisation</a>.
     </div>    
     
     <label class="govuk-label" for="VcsOrganisationName">
