Back button and post

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationCheckDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationCheckDetails.cshtml
@@ -2,3 +2,5 @@
 @model FamilyHubs.ServiceDirectory.Admin.Web.Areas.VcsAdmin.Pages.AddOrganisationCheckDetailsModel
 @{
 }
+
+AddOrganisationCheckDetails
