--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -89,7 +89,7 @@
                 </div>
                 <div class="card">
                     <h3 class="govuk-heading-s">
-                        <a href="#">Add a VCS organisation</a>
+                        <a asp-area="vcsAdmin" asp-page="/AddOrganisation">Add a VCS organisation</a>
                     </h3>
                     <p class="govuk-body-s"> Add an organisation before creating their user accounts.</p>
                 </div>
