--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_checkDetailRow.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_checkDetailRow.cshtml
@@ -8,7 +8,7 @@
         @Model.Value
     </dd>
     <dd class="govuk-summary-list__actions">
-        <a class="govuk-link" asp-page="@Model.ChangeLocation">
+        <a class="govuk-link" href="@Model.ChangeLocation">
             Change<span class="govuk-visually-hidden"> name</span>
         </a>
     </dd>
