--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@model IndexModel
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "Add a service to the local support directory";
