--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -27,7 +27,7 @@
                 </div>
                 <div class="card">
                     <h3 class="govuk-heading-s">
-                        <a href="#">Manage permissions</a>
+                        <a asp-page="/PlaceHolder">Manage permissions</a>
                     </h3>
                     <p class="govuk-body-s">View and remove account permissions to manage family support services or manage connection requests.</p>
                 </div>
@@ -40,31 +40,31 @@
             <div class="cards">
                 <div class="card">
                     <h3 class="govuk-heading-s">
-                        <a href="#">Add an LA service</a>
+                        <a asp-page="/PlaceHolder">Add an LA service</a>
                     </h3>
                     <p class="govuk-body-s">Add a service to the directory.</p>
                 </div>
                 <div class="card">
                     <h3 class="govuk-heading-s">
-                        <a href="#">Manage LA services</a>
+                        <a asp-page="/PlaceHolder">Manage LA services</a>
                     </h3>
                     <p class="govuk-body-s">View, change or delete services shown in the directory.</p>
                 </div>
                 <div class="card">
                     <h3 class="govuk-heading-s">
-                        <a href="#">Add a family hub</a>
+                        <a asp-page="/PlaceHolder">Add a family hub</a>
                     </h3>
                     <p class="govuk-body-s">Add a family hub to the directory.</p>
                 </div>
                 <div class="card">
                     <h3 class="govuk-heading-s">
-                        <a href="#">Manage family hubs</a>
+                        <a asp-page="/PlaceHolder">Manage family hubs</a>
                     </h3>
                     <p class="govuk-body-s">View, change or delete family hubs shown in the directory.</p>
                 </div>
                 <div class="card">
                     <h3 class="govuk-heading-s">
-                        <a href="#">Activate a local authority</a>
+                        <a asp-page="/PlaceHolder">Activate a local authority</a>
                     </h3>
                     <p class="govuk-body-s">Activate an LA before you create its accounts, services and family hubs.</p>
                 </div>
@@ -77,13 +77,13 @@
             <div class="cards">
                 <div class="card">
                     <h3 class="govuk-heading-s">
-                        <a href="#">Add a VCS service</a>
+                        <a asp-page="/PlaceHolder">Add a VCS service</a>
                     </h3>
                     <p class="govuk-body-s">Add a service to the directory.</p>
                 </div>
                 <div class="card">
                     <h3 class="govuk-heading-s">
-                        <a href="#">Manage VCS services</a>
+                        <a asp-page="/PlaceHolder">Manage VCS services</a>
                     </h3>
                     <p class="govuk-body-s">View, change or delete services shown in the directory.</p>
                 </div>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="card">
                     <h3 class="govuk-heading-s">
-                        <a href="#">Manage VCS organisations</a>
+                        <a asp-page="/PlaceHolder">Manage VCS organisations</a>
                     </h3>
                     <p class="govuk-body-s">View, change or delete existing organisations.</p>
                 </div>
@@ -104,22 +104,6 @@
             <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
             <div class="cards">
-                <div class="card">
-                    <h2 class="govuk-heading-s">
-                        <a asp-page-handler="AddServiceFlow" asp-route-organisationid="@Model.OrganisationViewModel.Id" data-module="govuk-button" data-testid="add-service">
-                            Add a service
-                        </a>
-                    </h2>
-                    <p class="govuk-body-s">Add a service to the directory.</p>
-                </div>
-                <div class="card">
-                    <h2 class="govuk-heading-s">
-                        <a asp-page-handler="ManageServiceFlow" asp-route-organisationid="@Model.OrganisationViewModel.Id" data-module="govuk-button" data-testid="manage-services">
-                            Manage your services
-                        </a>
-                    </h2>
-                    <p class="govuk-body-s">View, change or delete services in the directory.</p>
-                </div>
                 @if (Model.IsUploadSpreadsheetEnabled)
                 {
                     <div class="card">
