--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationCheckDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationCheckDetails.cshtml
@@ -2,6 +2,7 @@
 @using FamilyHubs.ServiceDirectory.Admin.Core.Models;
 @model FamilyHubs.ServiceDirectory.Admin.Web.Areas.VcsAdmin.Pages.AddOrganisationCheckDetailsModel
 @{
+    ViewData["Title"] = "Check details";
     Layout = "~/pages/Shared/_CheckDetailsPageLayout.cshtml";
 }
 
