fix encoding for special characters to display correctly

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
@@ -14,8 +14,14 @@
     <script>
         let selectElement = document.querySelector('#LaOrganisationName')
 
+        function decodeHtml(html) {
+            var txt = document.createElement("textarea");
+            txt.innerHTML = html;
+            return txt.value;
+        }
+
         accessibleAutocomplete.enhanceSelectElement({
-            defaultValue: '@Model.LaOrganisationName',
+            defaultValue: decodeHtml('@Model.LaOrganisationName'),
             name: 'localAuthority',
             selectElement: selectElement
         })
