Basic page renders

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -27,7 +27,7 @@
                 </div>
                 <div class="card">
                     <h3 class="govuk-heading-s">
-                        <a asp-page="/PlaceHolder">Manage permissions</a>
+                        <a href="AccountAdmin/ManagePermissions">Manage permissions</a>
                     </h3>
                     <p class="govuk-body-s">View and remove account permissions to manage family support services or manage connection requests.</p>
                 </div>
