#FGH-2101 #FHG-2106 My account area added with view personal details page

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Header.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Header.cshtml
@@ -35,7 +35,7 @@
                     {
                         <ul id="navigation" class="govuk-header__navigation-list">
                             <li class="govuk-header__navigation-item">
-                                <a class="govuk-header__link" href="#">My account</a>
+                                <a class="govuk-header__link" href="/myaccount/viewpersonaldetails">My account</a>
                             </li>
                             <li class="govuk-header__navigation-item">
                                 <a class="govuk-header__link" href="/account/signout">
