#FHG-2106 navigate to gov one login account page

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
@@ -28,7 +28,7 @@
                     </tbody>
                 </table>
 
-                <p><a class="govuk-link govuk-link--no-visited-state" href="@Model.GovOneLoginAccountPage">Manage your GOV.UK One Login details</a></p>
+                <p><a class="govuk-link govuk-link--no-visited-state" href="@Model.GovOneLoginAccountPage" target="_blank">Manage your GOV.UK One Login details</a></p>
 
                 <p>To delete your account, contact your administrator.</p>
 
