#FHG-2106 blank edit page added

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
@@ -23,7 +23,7 @@
                         <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header">Name</th>
                             <td class="govuk-table__cell">@Model.FullName</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric"><a href="change-name">Change</a></td>
+                            <td class="govuk-table__cell govuk-table__cell--numeric"><a asp-page="/EditPersonalDetail">Change</a></td>
                         </tr>
                     </tbody>
                 </table>
